[gd_scene load_steps=8 format=2]

[ext_resource path="res://TextBoxManager.gd" type="Script" id=1]
[ext_resource path="res://MainManager.gd" type="Script" id=2]
[ext_resource path="res://SelectionManager.gd" type="Script" id=3]
[ext_resource path="res://MainFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://ErrorManager.gd" type="Script" id=5]

[sub_resource type="Animation" id=2]
resource_name = "DisappearText"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 1.0, 0.0 ]
}

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.211765, 0.207843, 0.207843, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Token" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 30.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="VBoxContainer/Token"]
margin_top = 5.0
margin_right = 43.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 4 )
text = "Token"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/Token"]
margin_left = 47.0
margin_right = 303.0
margin_bottom = 30.0
rect_min_size = Vector2( 256, 25 )
custom_fonts/font = ExtResource( 4 )

[node name="Button" type="Button" parent="VBoxContainer/Token"]
margin_left = 307.0
margin_right = 352.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 4 )
text = "Hide"

[node name="SourceServerID" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 34.0
margin_right = 1024.0
margin_bottom = 64.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="VBoxContainer/SourceServerID"]
margin_top = 5.0
margin_right = 113.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 4 )
text = "Source server ID"
valign = 1

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/SourceServerID"]
margin_left = 117.0
margin_right = 373.0
margin_bottom = 30.0
rect_min_size = Vector2( 256, 25 )
custom_fonts/font = ExtResource( 4 )

[node name="TargetServerID" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 68.0
margin_right = 1024.0
margin_bottom = 98.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="VBoxContainer/TargetServerID"]
margin_top = 5.0
margin_right = 111.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 4 )
text = "Target server ID"
valign = 1

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/TargetServerID"]
margin_left = 115.0
margin_right = 371.0
margin_bottom = 30.0
rect_min_size = Vector2( 256, 25 )
custom_fonts/font = ExtResource( 4 )

[node name="Download" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 102.0
margin_right = 1024.0
margin_bottom = 128.0
alignment = 1

[node name="Control2" type="Control" parent="VBoxContainer/Download"]
margin_right = 203.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="Button" type="Button" parent="VBoxContainer/Download"]
margin_left = 207.0
margin_right = 816.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 6.0
custom_fonts/font = ExtResource( 4 )
text = "Download"

[node name="Control" type="Control" parent="VBoxContainer/Download"]
margin_left = 820.0
margin_right = 1024.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 132.0
margin_right = 1024.0
margin_bottom = 152.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
align = 1
script = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="VBoxContainer/Label"]
anims/DisappearText = SubResource( 2 )

[node name="Upload" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 156.0
margin_right = 1024.0
margin_bottom = 182.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
alignment = 1

[node name="Control" type="Control" parent="VBoxContainer/Upload"]
margin_right = 203.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 9
size_flags_stretch_ratio = 2.0

[node name="Button3" type="Button" parent="VBoxContainer/Upload"]
margin_left = 207.0
margin_right = 816.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 6.0
custom_fonts/font = ExtResource( 4 )
text = "Upload"

[node name="Control3" type="Control" parent="VBoxContainer/Upload"]
margin_left = 820.0
margin_right = 1024.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="Selectors" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 186.0
margin_right = 1024.0
margin_bottom = 212.0

[node name="Control2" type="Control" parent="VBoxContainer/Selectors"]
margin_right = 77.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[node name="Button" type="Button" parent="VBoxContainer/Selectors"]
margin_left = 81.0
margin_right = 469.0
margin_bottom = 26.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
text = "Select all"

[node name="Control" type="Control" parent="VBoxContainer/Selectors"]
margin_left = 473.0
margin_right = 550.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[node name="Button2" type="Button" parent="VBoxContainer/Selectors"]
margin_left = 554.0
margin_right = 942.0
margin_bottom = 26.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
text = "Select none"

[node name="Control3" type="Control" parent="VBoxContainer/Selectors"]
margin_left = 946.0
margin_right = 1024.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 9
size_flags_stretch_ratio = 0.2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 216.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3
custom_styles/bg = SubResource( 1 )

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 1024.0
margin_bottom = 384.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 6
script = ExtResource( 3 )

[connection signal="pressed" from="VBoxContainer/Download/Button" to="VBoxContainer" method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Upload/Button3" to="VBoxContainer" method="start_uploading"]
[connection signal="pressed" from="VBoxContainer/Selectors/Button" to="VBoxContainer/ScrollContainer/GridContainer" method="select_all"]
[connection signal="pressed" from="VBoxContainer/Selectors/Button2" to="VBoxContainer/ScrollContainer/GridContainer" method="select_none"]
[connection signal="resized" from="VBoxContainer/ScrollContainer" to="VBoxContainer" method="_on_resized"]
